[gd_scene load_steps=5 format=4 uid="uid://c37hekxgia0d2"]

[ext_resource type="Script" path="res://main menu/Reward Menu/reward_screen.gd" id="1_m7cdi"]
[ext_resource type="TileSet" uid="uid://lpxbxcnqa0re" path="res://main menu/Reward Menu/new_tile_set.tres" id="2_ckjyp"]
[ext_resource type="PackedScene" uid="uid://c40jnwji01pwt" path="res://main menu/Reward Menu/RewardBase.tscn" id="3_ocy4p"]

[sub_resource type="LabelSettings" id="LabelSettings_hitdo"]
font_color = Color(0, 0, 0, 1)

[node name="RewardScreen" type="CanvasLayer"]
process_mode = 3
layer = 128

[node name="Control" type="Control" parent="."]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_right = 575.0
offset_bottom = 285.0
script = ExtResource("1_m7cdi")

[node name="Layer1" type="TileMapLayer" parent="Control"]
z_index = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAwAAAAAAAAABAAAAAwABAAAAAAAAAAEAAwAAAAEAAAABAAEAAwACAAEAAAAAAAIAAwAAAAIAAAAAAAMAAwAAAAEAAAAAAAQAAwAAAAIAAAABAAQAAwADAAEAAAACAAQAAwADAAEAAAADAAQAAwADAAEAAAAEAAQAAwADAAEAAAAFAAQAAwADAAEAAAAGAAQAAwADAAEAAAAHAAQAAwADAAEAAAAHAAAAAwABAAAAAAAHAAEAAwADAAEAAAAHAAIAAwADAAEAAAAHAAMAAwADAAEAAAAGAAAAAwADAAAAAAAFAAAAAwACAAAAAAAEAAAAAwABAAAAAAADAAAAAwADAAAAAAACAAAAAwACAAAAAAABAAIAAwACAAEAAAABAAMAAwACAAEAAAACAAMAAwACAAEAAAADAAMAAwACAAEAAAAEAAMAAwACAAEAAAAFAAMAAwACAAEAAAAGAAMAAwACAAEAAAAGAAIAAwACAAEAAAAGAAEAAwACAAEAAAAFAAEAAwACAAEAAAAEAAEAAwACAAEAAAADAAEAAwACAAEAAAACAAEAAwACAAEAAAACAAIAAwACAAEAAAADAAIAAwACAAEAAAAEAAIAAwACAAEAAAAFAAIAAwACAAEAAAAAAAUAAwAAAAEAAAAAAAYAAwAAAAIAAAABAAYAAwABAAEAAAACAAYAAwABAAEAAAADAAYAAwABAAEAAAAEAAYAAwABAAEAAAAGAAYAAwABAAEAAAAFAAYAAwABAAEAAAAHAAYAAwACAAEAAAAIAAYAAwADAAEAAAAJAAYAAwABAAEAAAAKAAYAAwABAAIAAAAKAAUAAwADAAIAAAAKAAQAAwADAAEAAAAKAAMAAwABAAEAAAAKAAIAAwABAAEAAAAKAAEAAwABAAEAAAAKAAAAAwABAAAAAAAJAAAAAwADAAAAAAAIAAAAAwACAAAAAAABAAUAAwADAAEAAAACAAUAAwADAAEAAAADAAUAAwADAAEAAAAEAAUAAwADAAEAAAAFAAUAAwADAAEAAAAGAAUAAwADAAEAAAAHAAUAAwADAAEAAAAIAAUAAwABAAIAAAAJAAUAAwACAAIAAAAJAAQAAwACAAEAAAAJAAMAAwADAAEAAAAJAAIAAwADAAEAAAAJAAEAAwADAAEAAAAIAAEAAwADAAEAAAAIAAMAAwADAAEAAAAIAAQAAwABAAEAAAAIAAIAAwADAAEAAAAAAAcAAwAAAAEAAAAAAAgAAwAAAAIAAAAAAAkAAwAAAAEAAAAAAAoAAwAAAAIAAAAAAAsAAwAAAAEAAAABAAsAAwABAAEAAAACAAsAAwACAAEAAAADAAsAAwADAAEAAAAEAAsAAwABAAEAAAAFAAsAAwACAAEAAAAGAAsAAwADAAEAAAAHAAsAAwABAAEAAAAIAAsAAwACAAEAAAAJAAsAAwADAAEAAAAKAAsAAwABAAIAAAALAAsAAwACAAIAAAAMAAsAAwADAAIAAAANAAsAAwABAAEAAAAOAAsAAwACAAEAAAAPAAsAAwABAAIAAAAQAAsAAwACAAIAAAARAAsAAwADAAIAAAASAAsAAwABAAIAAAASAAoAAwABAAEAAAASAAkAAwACAAEAAAASAAgAAwADAAIAAAASAAcAAwADAAEAAAASAAYAAwADAAIAAAASAAUAAwADAAEAAAASAAQAAwACAAIAAAASAAMAAwACAAEAAAASAAIAAwACAAIAAAASAAEAAwACAAEAAAASAAAAAwADAAAAAAARAAAAAwACAAAAAAAQAAAAAwABAAAAAAAPAAAAAwADAAAAAAAOAAAAAwACAAAAAAANAAAAAwABAAAAAAAMAAAAAwADAAAAAAALAAAAAwACAAAAAAAKAAcAAwACAAEAAAAJAAcAAwABAAEAAAAIAAcAAwADAAIAAAAHAAcAAwACAAIAAAAGAAcAAwABAAIAAAAFAAcAAwABAAEAAAAEAAcAAwACAAEAAAADAAcAAwABAAEAAAACAAcAAwACAAEAAAABAAcAAwABAAEAAAABAAgAAwABAAIAAAABAAkAAwABAAEAAAABAAoAAwABAAEAAAACAAoAAwABAAIAAAAQAAEAAwACAAEAAAAQAAIAAwACAAIAAAARAAEAAwABAAEAAAARAAIAAwABAAIAAAAQAAMAAwABAAEAAAAQAAQAAwABAAIAAAARAAMAAwABAAEAAAARAAQAAwABAAIAAAAQAAUAAwABAAEAAAAQAAYAAwABAAIAAAARAAUAAwACAAEAAAARAAYAAwACAAIAAAAQAAcAAwABAAEAAAAQAAgAAwABAAIAAAARAAcAAwACAAEAAAARAAgAAwACAAIAAAAQAAkAAwACAAEAAAAQAAoAAwACAAIAAAARAAkAAwADAAEAAAARAAoAAwADAAIAAAAOAAkAAwADAAEAAAAOAAoAAwADAAIAAAAPAAkAAwABAAEAAAAPAAoAAwABAAIAAAAMAAkAAwABAAEAAAAMAAoAAwABAAIAAAANAAkAAwACAAEAAAANAAoAAwACAAIAAAAKAAkAAwADAAIAAAAKAAoAAwABAAEAAAALAAkAAwABAAIAAAALAAoAAwACAAEAAAAIAAkAAwABAAIAAAAIAAoAAwABAAIAAAAJAAkAAwACAAIAAAAJAAoAAwACAAIAAAAGAAkAAwABAAEAAAAGAAoAAwABAAIAAAAHAAkAAwACAAEAAAAHAAoAAwACAAIAAAAEAAkAAwABAAEAAAAEAAoAAwABAAIAAAAFAAkAAwACAAEAAAAFAAoAAwACAAIAAAACAAkAAwABAAEAAAADAAkAAwACAAEAAAADAAoAAwACAAIAAAACAAgAAwACAAIAAAADAAgAAwABAAIAAAAEAAgAAwACAAIAAAAFAAgAAwABAAIAAAAGAAgAAwABAAIAAAAHAAgAAwACAAIAAAAIAAgAAwADAAIAAAAJAAgAAwABAAIAAAAKAAgAAwACAAIAAAALAAcAAwADAAEAAAALAAgAAwADAAIAAAAMAAcAAwABAAEAAAAMAAgAAwABAAIAAAANAAcAAwACAAEAAAANAAgAAwACAAIAAAAOAAcAAwADAAEAAAAOAAgAAwADAAIAAAAPAAcAAwACAAEAAAAPAAgAAwACAAIAAAALAAUAAwABAAIAAAALAAYAAwABAAEAAAAMAAUAAwACAAIAAAAMAAYAAwACAAEAAAANAAUAAwADAAIAAAANAAYAAwADAAEAAAAOAAUAAwACAAEAAAAOAAYAAwACAAIAAAAPAAUAAwADAAEAAAAPAAYAAwADAAIAAAAOAAMAAwABAAEAAAAOAAQAAwABAAIAAAAPAAMAAwACAAEAAAAPAAQAAwACAAIAAAAMAAMAAwABAAEAAAAMAAQAAwACAAEAAAANAAMAAwACAAEAAAANAAQAAwADAAEAAAALAAMAAwACAAEAAAALAAQAAwABAAEAAAALAAEAAwABAAEAAAALAAIAAwABAAIAAAAMAAEAAwACAAEAAAAMAAIAAwACAAIAAAANAAEAAwABAAEAAAANAAIAAwABAAIAAAAOAAEAAwACAAEAAAAOAAIAAwACAAIAAAAPAAEAAwADAAEAAAAPAAIAAwADAAIAAAAAAAwAAwAAAAIAAAAAAA0AAwAAAAEAAAAAAA4AAwAAAAIAAAAAAA8AAwAAAAEAAAABAA8AAwABAAEAAAACAA8AAwABAAEAAAADAA8AAwACAAEAAAAEAA8AAwADAAEAAAAFAA8AAwABAAEAAAAGAA8AAwACAAEAAAAHAA8AAwADAAEAAAAIAA8AAwABAAEAAAAJAA8AAwACAAEAAAAKAA8AAwADAAEAAAALAA8AAwABAAEAAAAMAA8AAwACAAEAAAANAA8AAwADAAEAAAAOAA8AAwABAAEAAAAPAA8AAwACAAEAAAAQAA8AAwADAAEAAAARAA8AAwABAAEAAAASAA8AAwACAAEAAAATAA8AAwADAAEAAAAUAA8AAwABAAEAAAAVAA8AAwABAAIAAAAVAA4AAwABAAEAAAAVAA0AAwABAAIAAAAVAAwAAwABAAEAAAAVAAsAAwABAAIAAAAVAAoAAwABAAIAAAAVAAkAAwABAAEAAAAVAAgAAwADAAIAAAAVAAcAAwADAAEAAAAVAAYAAwABAAIAAAAVAAUAAwABAAEAAAAVAAQAAwADAAIAAAAVAAMAAwADAAEAAAAVAAIAAwABAAIAAAAVAAEAAwABAAEAAAAVAAAAAwADAAAAAAAUAAAAAwACAAAAAAATAAAAAwABAAAAAAATAAEAAwADAAEAAAATAAIAAwADAAIAAAATAAMAAwADAAEAAAAUAAMAAwACAAEAAAAUAAIAAwACAAIAAAAUAAEAAwACAAEAAAAUAAQAAwACAAIAAAAUAAUAAwACAAEAAAAUAAYAAwACAAIAAAAUAAcAAwACAAEAAAAUAAgAAwACAAIAAAAUAAkAAwACAAEAAAAUAAoAAwADAAEAAAAUAA4AAwABAAIAAAATAA4AAwADAAIAAAASAA4AAwACAAIAAAARAA4AAwABAAIAAAAQAA4AAwADAAIAAAAPAA4AAwACAAIAAAAOAA4AAwABAAIAAAANAA4AAwADAAIAAAAMAA4AAwACAAIAAAALAA4AAwABAAIAAAAKAA4AAwADAAIAAAAJAA4AAwACAAIAAAAIAA4AAwABAAIAAAAHAA4AAwADAAIAAAAGAA4AAwACAAIAAAAFAA4AAwABAAIAAAAEAA4AAwADAAIAAAADAA4AAwACAAIAAAACAA4AAwABAAIAAAABAA4AAwABAAIAAAABAA0AAwABAAEAAAACAA0AAwABAAEAAAADAA0AAwACAAEAAAAEAA0AAwADAAEAAAAFAA0AAwABAAEAAAAGAA0AAwACAAEAAAAHAAwAAwABAAIAAAAIAAwAAwACAAIAAAAJAAwAAwADAAIAAAAKAAwAAwABAAIAAAALAAwAAwACAAIAAAAMAAwAAwADAAIAAAANAAwAAwABAAIAAAAOAAwAAwACAAIAAAAPAAwAAwADAAIAAAAQAAwAAwABAAIAAAARAAwAAwABAAIAAAASAAwAAwABAAEAAAATAAwAAwACAAEAAAAUAAwAAwADAAEAAAAUAA0AAwADAAIAAAATAA0AAwACAAIAAAASAA0AAwABAAIAAAARAA0AAwABAAEAAAAQAA0AAwADAAEAAAAPAA0AAwACAAEAAAAOAA0AAwABAAEAAAANAA0AAwADAAEAAAAMAA0AAwACAAEAAAALAA0AAwABAAEAAAAKAA0AAwADAAEAAAAJAA0AAwACAAEAAAAIAA0AAwABAAEAAAAFAAwAAwACAAIAAAAEAAwAAwABAAIAAAADAAwAAwADAAIAAAACAAwAAwACAAIAAAABAAwAAwABAAIAAAAGAAwAAwADAAIAAAATAAsAAwACAAIAAAATAAoAAwACAAEAAAATAAkAAwADAAEAAAATAAgAAwADAAIAAAATAAcAAwADAAEAAAATAAYAAwADAAIAAAATAAQAAwADAAIAAAAUAAsAAwADAAIAAAATAAUAAwADAAEAAAAWAA8AAwACAAIAAAAXAA8AAwADAAIAAAAYAA8AAwABAAIAAAAZAA8AAwACAAIAAAAaAA8AAwADAAIAAAAbAA8AAwABAAIAAAAcAA8AAwACAAIAAAAdAA8AAwADAAIAAAAeAA8AAwABAAIAAAAfAA8AAwACAAIAAAAfAA4AAwACAAEAAAAfAA0AAwACAAIAAAAfAAwAAwACAAEAAAAfAAsAAwACAAIAAAAfAAoAAwACAAEAAAAfAAkAAwACAAIAAAAfAAgAAwACAAEAAAAfAAcAAwACAAIAAAAfAAYAAwACAAEAAAAfAAUAAwACAAIAAAAfAAQAAwACAAEAAAAfAAMAAwADAAEAAAAfAAIAAwADAAIAAAAfAAEAAwADAAEAAAAfAAAAAwABAAAAAAAeAAAAAwADAAAAAAAdAAAAAwACAAAAAAAcAAAAAwABAAAAAAAbAAAAAwADAAAAAAAaAAAAAwACAAAAAAAZAAAAAwABAAAAAAAYAAAAAwADAAAAAAAXAAAAAwACAAAAAAAWAAAAAwABAAAAAAAgAA8AAwADAAIAAAAhAA8AAwACAAEAAAAiAA8AAwADAAEAAAAjAA8AAwAFAAEAAAAjAA4AAwAFAAIAAAAjAA0AAwAFAAEAAAAjAAwAAwAFAAIAAAAjAAsAAwAFAAEAAAAjAAoAAwAFAAIAAAAjAAkAAwAFAAEAAAAjAAgAAwAFAAIAAAAjAAcAAwAFAAEAAAAjAAYAAwAFAAIAAAAjAAUAAwAFAAEAAAAjAAQAAwAFAAIAAAAjAAMAAwAFAAEAAAAjAAIAAwAFAAIAAAAjAAEAAwAFAAEAAAAjAAAAAwAFAAAAAAAiAAAAAwADAAAAAAAhAAAAAwADAAAAAAAgAAAAAwACAAAAAAAAABAAAwAAAAIAAAAAABEAAwAAAAMAAAAjABEAAwAFAAMAAAAiABEAAwAEAAMAAAAhABEAAwADAAMAAAAgABEAAwACAAMAAAAfABEAAwABAAMAAAAeABEAAwAEAAMAAAAdABEAAwADAAMAAAAcABEAAwACAAMAAAAbABEAAwABAAMAAAAaABEAAwAEAAMAAAAZABEAAwADAAMAAAAYABEAAwACAAMAAAAXABEAAwABAAMAAAAWABEAAwAEAAMAAAAVABEAAwADAAMAAAAUABEAAwACAAMAAAATABEAAwABAAMAAAASABEAAwAEAAMAAAARABEAAwADAAMAAAAQABEAAwACAAMAAAAPABEAAwABAAMAAAAOABEAAwAEAAMAAAANABEAAwADAAMAAAAMABEAAwACAAMAAAALABEAAwABAAMAAAAKABEAAwAEAAMAAAAJABEAAwADAAMAAAAIABEAAwACAAMAAAAHABEAAwABAAMAAAAGABEAAwAEAAMAAAAFABEAAwADAAMAAAAEABEAAwACAAMAAAADABEAAwABAAMAAAACABEAAwACAAMAAAABABEAAwACAAMAAAAjABAAAwAFAAIAAAAiABAAAwADAAIAAAAhABAAAwACAAIAAAAgABAAAwABAAIAAAAfABAAAwADAAIAAAAeABAAAwACAAIAAAAdABAAAwABAAIAAAAcABAAAwADAAIAAAAbABAAAwACAAIAAAAaABAAAwABAAIAAAAZABAAAwADAAIAAAAYABAAAwACAAIAAAAXABAAAwABAAIAAAAWABAAAwADAAIAAAAVABAAAwACAAIAAAAUABAAAwABAAIAAAATABAAAwADAAIAAAASABAAAwACAAIAAAARABAAAwABAAIAAAAQABAAAwADAAIAAAAPABAAAwACAAIAAAAOABAAAwABAAIAAAANABAAAwADAAIAAAAMABAAAwACAAIAAAALABAAAwABAAIAAAAKABAAAwADAAIAAAAJABAAAwACAAIAAAAIABAAAwABAAIAAAAHABAAAwADAAIAAAAGABAAAwACAAIAAAAFABAAAwABAAIAAAAEABAAAwADAAIAAAADABAAAwACAAIAAAACABAAAwABAAIAAAABABAAAwABAAIAAAAWAA4AAwACAAEAAAAXAA4AAwADAAEAAAAYAA4AAwABAAEAAAAZAA4AAwACAAEAAAAaAA4AAwADAAEAAAAbAA4AAwABAAEAAAAcAA4AAwACAAEAAAAdAA4AAwADAAEAAAAeAA4AAwABAAEAAAAgAA4AAwADAAEAAAAhAA4AAwACAAIAAAAiAA4AAwADAAIAAAAiAA0AAwADAAEAAAAiAAwAAwADAAIAAAAiAAsAAwADAAEAAAAiAAoAAwADAAIAAAAhAAoAAwACAAIAAAAhAAkAAwACAAEAAAAhAAgAAwACAAIAAAAhAAcAAwACAAEAAAAhAAYAAwACAAIAAAAhAAUAAwACAAEAAAAhAAQAAwACAAIAAAAhAAMAAwACAAEAAAAiAAIAAwADAAIAAAAiAAEAAwADAAEAAAAiAAMAAwADAAEAAAAiAAQAAwADAAIAAAAiAAUAAwADAAEAAAAiAAYAAwADAAIAAAAiAAcAAwADAAEAAAAiAAgAAwADAAIAAAAWAA0AAwACAAIAAAAgAA0AAwADAAIAAAAhAA0AAwACAAEAAAAgAAsAAwADAAIAAAAgAAwAAwADAAEAAAAhAAsAAwACAAEAAAAhAAwAAwACAAIAAAAgAAkAAwADAAIAAAAgAAoAAwADAAEAAAAiAAkAAwADAAEAAAAgAAcAAwADAAIAAAAgAAgAAwADAAEAAAAgAAUAAwADAAIAAAAgAAYAAwADAAEAAAAgAAMAAwABAAEAAAAgAAQAAwADAAEAAAAdAAMAAwADAAEAAAAdAAQAAwADAAIAAAAeAAMAAwACAAEAAAAeAAQAAwABAAEAAAAdAAEAAwABAAEAAAAdAAIAAwABAAIAAAAeAAEAAwACAAEAAAAeAAIAAwACAAIAAAAgAAEAAwABAAEAAAAgAAIAAwABAAIAAAAhAAEAAwACAAEAAAAhAAIAAwACAAIAAAAWAAoAAwACAAIAAAAWAAsAAwACAAIAAAAXAAoAAwADAAIAAAAXAAsAAwADAAIAAAAYAAoAAwABAAEAAAAYAAsAAwABAAIAAAAZAAoAAwACAAEAAAAZAAsAAwACAAIAAAAaAAoAAwADAAEAAAAaAAsAAwADAAIAAAAbAAoAAwABAAEAAAAbAAsAAwABAAIAAAAcAAoAAwACAAEAAAAcAAsAAwACAAIAAAAdAAoAAwADAAEAAAAdAAsAAwADAAIAAAAeAAoAAwABAAEAAAAeAAsAAwABAAIAAAAeAAgAAwABAAEAAAAeAAkAAwABAAIAAAAbAAgAAwADAAEAAAAbAAkAAwADAAIAAAAcAAgAAwACAAEAAAAcAAkAAwACAAIAAAAdAAgAAwADAAEAAAAdAAkAAwADAAIAAAAbAAYAAwADAAIAAAAbAAcAAwADAAIAAAAcAAYAAwACAAEAAAAcAAcAAwACAAIAAAAdAAYAAwADAAEAAAAdAAcAAwADAAIAAAAbAAQAAwABAAIAAAAbAAUAAwACAAIAAAAcAAQAAwACAAIAAAAcAAUAAwADAAIAAAAdAAUAAwADAAIAAAAeAAUAAwABAAIAAAAeAAYAAwABAAEAAAAeAAcAAwABAAIAAAAbAAwAAwABAAEAAAAbAA0AAwABAAIAAAAcAAwAAwACAAEAAAAcAA0AAwACAAIAAAAdAAwAAwADAAEAAAAdAA0AAwADAAIAAAAeAAwAAwABAAEAAAAeAA0AAwABAAIAAAAWAAwAAwACAAEAAAAXAAwAAwADAAEAAAAXAA0AAwADAAIAAAAYAAwAAwABAAEAAAAYAA0AAwABAAIAAAAZAAwAAwACAAEAAAAZAA0AAwACAAIAAAAaAAwAAwADAAEAAAAaAA0AAwADAAIAAAAXAAgAAwABAAEAAAAXAAkAAwABAAIAAAAYAAgAAwACAAEAAAAYAAkAAwACAAIAAAAZAAgAAwABAAEAAAAZAAkAAwABAAIAAAAXAAYAAwADAAIAAAAXAAcAAwACAAEAAAAYAAYAAwACAAEAAAAYAAcAAwADAAEAAAAZAAYAAwABAAIAAAAZAAcAAwABAAIAAAAXAAQAAwACAAIAAAAXAAUAAwADAAEAAAAYAAQAAwADAAIAAAAYAAUAAwACAAIAAAAZAAQAAwABAAIAAAAZAAUAAwABAAEAAAAZAAIAAwACAAIAAAAZAAMAAwABAAEAAAAaAAIAAwADAAIAAAAaAAMAAwACAAEAAAAbAAIAAwACAAIAAAAbAAMAAwABAAEAAAAaAAEAAwADAAEAAAAbAAEAAwACAAEAAAAcAAEAAwADAAEAAAAcAAIAAwADAAIAAAAYAAEAAwABAAEAAAAYAAIAAwADAAEAAAAZAAEAAwACAAEAAAAWAAEAAwACAAEAAAAWAAIAAwABAAEAAAAXAAEAAwADAAEAAAAXAAIAAwACAAEAAAAWAAMAAwABAAEAAAAXAAMAAwACAAEAAAAYAAMAAwADAAEAAAAWAAQAAwABAAIAAAAWAAUAAwACAAEAAAAWAAYAAwACAAIAAAAWAAcAAwABAAEAAAAWAAgAAwABAAIAAAAWAAkAAwACAAEAAAAaAAgAAwACAAEAAAAaAAkAAwACAAIAAAAaAAYAAwACAAIAAAAaAAcAAwACAAIAAAAaAAUAAwABAAIAAAAaAAQAAwABAAEAAAAcAAMAAwACAAEAAAAHAA0AAwADAAEAAAA=")
tile_set = ExtResource("2_ckjyp")

[node name="TileMapLayer" type="TileMapLayer" parent="Control"]
z_index = 2
tile_map_data = PackedByteArray("AAAEAAQABQAAAAAAAAAEAAUABQAAAAEAAAAFAAQABQABAAAAAAAFAAUABQABAAEAAAAEAAYABQAAAAAAAAAEAAcABQAAAAEAAAAFAAYABQABAAAAAAAFAAcABQABAAEAAAAEAAgABQAAAAAAAAAEAAkABQAAAAEAAAAFAAgABQABAAAAAAAFAAkABQABAAEAAAAEAAoABQAAAAAAAAAEAAsABQAAAAEAAAAFAAoABQABAAAAAAAFAAsABQABAAEAAAAEAAwABQAAAAAAAAAEAA0ABQAAAAEAAAAFAAwABQABAAAAAAAFAA0ABQABAAEAAAAGAAQABQAAAAAAAAAGAAUABQAAAAEAAAAHAAQABQABAAAAAAAHAAUABQABAAEAAAAGAAYABQAAAAAAAAAGAAcABQAAAAEAAAAHAAYABQABAAAAAAAHAAcABQABAAEAAAAGAAgABQAAAAAAAAAGAAkABQAAAAEAAAAHAAgABQABAAAAAAAHAAkABQABAAEAAAAGAAoABQAAAAAAAAAGAAsABQAAAAEAAAAHAAoABQABAAAAAAAHAAsABQABAAEAAAAGAAwABQAAAAAAAAAGAA0ABQAAAAEAAAAHAAwABQABAAAAAAAHAA0ABQABAAEAAAAIAAQABQAAAAAAAAAIAAUABQAAAAEAAAAJAAQABQABAAAAAAAJAAUABQABAAEAAAAIAAYABQAAAAAAAAAIAAcABQAAAAEAAAAJAAYABQABAAAAAAAJAAcABQABAAEAAAAIAAgABQAAAAAAAAAIAAkABQAAAAEAAAAJAAgABQABAAAAAAAJAAkABQABAAEAAAAIAAoABQAAAAAAAAAIAAsABQAAAAEAAAAJAAoABQABAAAAAAAJAAsABQABAAEAAAAIAAwABQAAAAAAAAAIAA0ABQAAAAEAAAAJAAwABQABAAAAAAAJAA0ABQABAAEAAAAKAAQABQAAAAAAAAAKAAUABQAAAAEAAAALAAQABQABAAAAAAALAAUABQABAAEAAAAKAAYABQAAAAAAAAAKAAcABQAAAAEAAAALAAYABQABAAAAAAALAAcABQABAAEAAAAKAAgABQAAAAAAAAAKAAkABQAAAAEAAAALAAgABQABAAAAAAALAAkABQABAAEAAAAKAAoABQAAAAAAAAAKAAsABQAAAAEAAAALAAoABQABAAAAAAALAAsABQABAAEAAAAKAAwABQAAAAAAAAAKAA0ABQAAAAEAAAALAAwABQABAAAAAAALAA0ABQABAAEAAAAOAAQABQAAAAAAAAAOAAUABQAAAAEAAAAPAAQABQABAAAAAAAPAAUABQABAAEAAAAOAAYABQAAAAAAAAAOAAcABQAAAAEAAAAPAAYABQABAAAAAAAPAAcABQABAAEAAAAOAAgABQAAAAAAAAAOAAkABQAAAAEAAAAPAAgABQABAAAAAAAPAAkABQABAAEAAAAOAAoABQAAAAAAAAAOAAsABQAAAAEAAAAPAAoABQABAAAAAAAPAAsABQABAAEAAAAOAAwABQAAAAAAAAAOAA0ABQAAAAEAAAAPAAwABQABAAAAAAAPAA0ABQABAAEAAAAQAAQABQAAAAAAAAAQAAUABQAAAAEAAAARAAQABQABAAAAAAARAAUABQABAAEAAAAQAAYABQAAAAAAAAAQAAcABQAAAAEAAAARAAYABQABAAAAAAARAAcABQABAAEAAAAQAAgABQAAAAAAAAAQAAkABQAAAAEAAAARAAgABQABAAAAAAARAAkABQABAAEAAAAQAAoABQAAAAAAAAAQAAsABQAAAAEAAAARAAoABQABAAAAAAARAAsABQABAAEAAAAQAAwABQAAAAAAAAAQAA0ABQAAAAEAAAARAAwABQABAAAAAAARAA0ABQABAAEAAAASAAQABQAAAAAAAAASAAUABQAAAAEAAAATAAQABQABAAAAAAATAAUABQABAAEAAAASAAYABQAAAAAAAAASAAcABQAAAAEAAAATAAYABQABAAAAAAATAAcABQABAAEAAAASAAgABQAAAAAAAAASAAkABQAAAAEAAAATAAgABQABAAAAAAATAAkABQABAAEAAAASAAoABQAAAAAAAAASAAsABQAAAAEAAAATAAoABQABAAAAAAATAAsABQABAAEAAAASAAwABQAAAAAAAAASAA0ABQAAAAEAAAATAAwABQABAAAAAAATAA0ABQABAAEAAAAUAAQABQAAAAAAAAAUAAUABQAAAAEAAAAVAAQABQABAAAAAAAVAAUABQABAAEAAAAUAAYABQAAAAAAAAAUAAcABQAAAAEAAAAVAAYABQABAAAAAAAVAAcABQABAAEAAAAUAAgABQAAAAAAAAAUAAkABQAAAAEAAAAVAAgABQABAAAAAAAVAAkABQABAAEAAAAUAAoABQAAAAAAAAAUAAsABQAAAAEAAAAVAAoABQABAAAAAAAVAAsABQABAAEAAAAUAAwABQAAAAAAAAAUAA0ABQAAAAEAAAAVAAwABQABAAAAAAAVAA0ABQABAAEAAAAYAAQABQAAAAAAAAAYAAUABQAAAAEAAAAZAAQABQABAAAAAAAZAAUABQABAAEAAAAYAAYABQAAAAAAAAAYAAcABQAAAAEAAAAZAAYABQABAAAAAAAZAAcABQABAAEAAAAYAAgABQAAAAAAAAAYAAkABQAAAAEAAAAZAAgABQABAAAAAAAZAAkABQABAAEAAAAYAAoABQAAAAAAAAAYAAsABQAAAAEAAAAZAAoABQABAAAAAAAZAAsABQABAAEAAAAYAAwABQAAAAAAAAAYAA0ABQAAAAEAAAAZAAwABQABAAAAAAAZAA0ABQABAAEAAAAaAAQABQAAAAAAAAAaAAUABQAAAAEAAAAbAAQABQABAAAAAAAbAAUABQABAAEAAAAaAAYABQAAAAAAAAAaAAcABQAAAAEAAAAbAAYABQABAAAAAAAbAAcABQABAAEAAAAaAAgABQAAAAAAAAAaAAkABQAAAAEAAAAbAAgABQABAAAAAAAbAAkABQABAAEAAAAaAAoABQAAAAAAAAAaAAsABQAAAAEAAAAbAAoABQABAAAAAAAbAAsABQABAAEAAAAaAAwABQAAAAAAAAAaAA0ABQAAAAEAAAAbAAwABQABAAAAAAAbAA0ABQABAAEAAAAcAAQABQAAAAAAAAAcAAUABQAAAAEAAAAdAAQABQABAAAAAAAdAAUABQABAAEAAAAcAAYABQAAAAAAAAAcAAcABQAAAAEAAAAdAAYABQABAAAAAAAdAAcABQABAAEAAAAcAAgABQAAAAAAAAAcAAkABQAAAAEAAAAdAAgABQABAAAAAAAdAAkABQABAAEAAAAcAAoABQAAAAAAAAAcAAsABQAAAAEAAAAdAAoABQABAAAAAAAdAAsABQABAAEAAAAcAAwABQAAAAAAAAAcAA0ABQAAAAEAAAAdAAwABQABAAAAAAAdAA0ABQABAAEAAAAeAAQABQAAAAAAAAAeAAUABQAAAAEAAAAfAAQABQABAAAAAAAfAAUABQABAAEAAAAeAAYABQAAAAAAAAAeAAcABQAAAAEAAAAfAAYABQABAAAAAAAfAAcABQABAAEAAAAeAAgABQAAAAAAAAAeAAkABQAAAAEAAAAfAAgABQABAAAAAAAfAAkABQABAAEAAAAeAAoABQAAAAAAAAAeAAsABQAAAAEAAAAfAAoABQABAAAAAAAfAAsABQABAAEAAAAeAAwABQAAAAAAAAAeAA0ABQAAAAEAAAAfAAwABQABAAAAAAAfAA0ABQABAAEAAAAMAA8ACwAAAAAAAAANAA8ACwABAAAAAAAOAA8ACwABAAAAAAAPAA8ACwACAAAAAAAQAA8ACwABAAAAAAARAA8ACwACAAAAAAASAA8ACwABAAAAAAATAA8ACwACAAAAAAAUAA8ACwABAAAAAAAVAA8ACwACAAAAAAAWAA8ACwACAAAAAAAXAA8ACwADAAAAAAAMABAACwAAAAEAAAANABAACwABAAEAAAAOABAACwACAAEAAAAPABAACwABAAEAAAAUABAACwABAAEAAAAVABAACwABAAEAAAAWABAACwACAAEAAAAXABAACwADAAEAAAAQABAACwABAAEAAAARABAACwABAAEAAAASABAACwABAAEAAAATABAACwABAAEAAAA=")
tile_set = ExtResource("2_ckjyp")

[node name="RewardBase" parent="Control" instance=ExtResource("3_ocy4p")]
z_index = 3
layout_mode = 0
offset_left = 65.0
offset_top = 65.0
offset_right = 190.0
offset_bottom = 225.0

[node name="RewardBase2" parent="Control" instance=ExtResource("3_ocy4p")]
z_index = 3
layout_mode = 0
offset_left = 224.0
offset_top = 64.0
offset_right = 349.0
offset_bottom = 224.0

[node name="RewardBase3" parent="Control" instance=ExtResource("3_ocy4p")]
z_index = 3
layout_mode = 0
offset_left = 384.0
offset_top = 65.0
offset_right = 509.0
offset_bottom = 225.0

[node name="Label" type="Label" parent="Control"]
z_index = 3
layout_mode = 0
offset_left = 193.0
offset_top = 241.0
offset_right = 383.0
offset_bottom = 271.0
text = "CHOOSE YOUR REWARD"
label_settings = SubResource("LabelSettings_hitdo")
horizontal_alignment = 1
vertical_alignment = 1
